# syspr

./: CMakeLists.txt
task1/: func.c  func.h  header.h  main1.c
task2/: file1.txt  func.h  header.h  main2.c
task2.1/: el.cpp  logger.cpp  logger.hpp  main.cpp
task3/: func.h  header.h  main3.c
task4/: client.c  correct  fail  server.c
task5/: func.h  header.h  main5.c
task6/: client6.c  input.txt  server6.c
task7/: main7.c
